# ChangeLog for app-admin/eselect-mesa
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-admin/eselect-mesa/ChangeLog,v 1.9 2011/02/14 11:30:36 xarthisius Exp $

  14 Feb 2011; Kacper Kowalik <xarthisius@gentoo.org>
  eselect-mesa-0.0.8.ebuild:
  ppc stable wrt #344827, #354237

  12 Feb 2011; Raúl Porcel <armin76@gentoo.org> eselect-mesa-0.0.8.ebuild:
  alpha/ia64/sh/sparc stable wrt #344827

  31 Dec 2010; Jeroen Roovers <jer@gentoo.org> eselect-mesa-0.0.8.ebuild:
  Stable for HPPA (bug #344827).

  29 Dec 2010; Markus Meier <maekke@gentoo.org> eselect-mesa-0.0.8.ebuild:
  arm stable, bug #344827

  25 Dec 2010; Christian Faulhammer <fauli@gentoo.org>
  eselect-mesa-0.0.8.ebuild:
  x86 stable, bug 

  23 Dec 2010; Samuli Suominen <ssuominen@gentoo.org>
  eselect-mesa-0.0.8.ebuild:
  amd64 stable wrt #344827

  19 Dec 2010; Samuli Suominen <ssuominen@gentoo.org>
  eselect-mesa-0.0.8.ebuild:
  ppc64 stable wrt #344827

  28 Nov 2010; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  eselect-mesa-0.0.8.ebuild:
  Transfer keywords from media-libs/mesa

*eselect-mesa-0.0.8 (27 Nov 2010)

  27 Nov 2010; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  +eselect-mesa-0.0.8.ebuild, +metadata.xml:
  Initial import from x11 overlay.
