@@ -1,6 +1,12 @@
 # ChangeLog for app-admin/eselect-mesa
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-admin/eselect-mesa/ChangeLog,v 1.9 2011/02/14 11:30:36 xarthisius Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/eselect-mesa/ChangeLog,v 1.10 2011/02/18 16:30:24 chithanh Exp $
+
+*eselect-mesa-0.0.9 (18 Feb 2011)
+
+  18 Feb 2011; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
+  +eselect-mesa-0.0.9.ebuild:
+  Version bump. Now with multilib support
 
   14 Feb 2011; Kacper Kowalik <xarthisius@gentoo.org>
   eselect-mesa-0.0.8.ebuild:
